crates/test-files/fixtures/compile_errors/invalid_impl_type.fe
trait SomeTrait {}

impl SomeTrait for Map<u8, u8> {}